# hack_higgsfield

./: .gitignore  LICENSE  README.md  case_description_higgsfield_ds.md  main.py  main_multiclass.py  main_multiclass_v2.py  main_simplified.py  predict.py  pyproject.toml  run_features.py  run_features_v2.py  run_pipelines.py  train_final_model.py
.claude/: settings.local.json
config/: config.yaml  paths.yaml
notebooks/: 01_eda.ipynb
reports/: churn_pipelines.md  feature_engineering_plan.md  llm_eda_summary.md  modeling_strategy.md  research_on_process_higgsfield.md
src/churn/: classifier.py  multiclass_classifier.py  thresholds.py  torch_classifier.py  voluntary_vs_involuntary.py
src/data/: load_data.py  preprocess.py
src/explainability/: explainability.py
src/features/: build_features.py  build_features_v2.py  churn_features.py  churn_features_v2.py  feature_engineering.py
src/models/: evaluate.py  multiclass_evaluate.py  multiclass_pipelines.py  multiclass_pipelines_simplified.py  multiclass_pipelines_v2.py  optuna_hpo.py  pipeline_01_lgbm_baseline.py  pipeline_02_optuna_big3.py  pipeline_03_weighted_ensemble.py  pipeline_04_stacking.py  pipeline_05_hierarchical.py  pipeline_06_hybrid.py  pipeline_07_imbalance_ablation.py  pipeline_08_feature_selection.py  pipeline_09_seed_averaging.py  pipeline_10_neural_meta.py  pipeline_11_tabnet.py  pipeline_12_ovr_specialists.py  pipeline_13_kgmon_artifacts.py  pipeline_utils.py  pipelines.py  predict.py  shap_feature_ranking.py  train.py  train_v2.py
src/utils/: helpers.py  logger.py
