[project]
name = "hack_higgsfield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appnope==0.1.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.3.0",
    "asttokens==2.4.1",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.5",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "cffi==2.0.0",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecation==2.1.0",
    "dotenv==0.9.9",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.18.0",
    "flask==3.1.1",
    "flask-sqlalchemy==3.1.1",
    "fonttools==4.58.0",
    "fqdn==1.5.1",
    "frozenlist==1.6.0",
    "fsspec==2025.7.0",
    "gotrue==2.12.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "hf-xet==1.1.5",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.34.0",
    "hyperframe==6.1.0",
    "icontract==2.7.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.0",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.8",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kiwisolver==1.4.8",
    "lark==1.3.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.4",
    "mpmath==1.3.0",
    "multidict==6.4.4",
    "mypy==1.15.0",
    "mypy-extensions==1.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook==7.4.6",
    "notebook-shim==0.2.4",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pandas==2.3.2",
    "pandas-stubs==2.3.2.250827",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "postgrest==1.0.1",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.1",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==20.0.0",
    "pycparser==2.23",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydicom==3.0.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.1.0",
    "realtime==2.4.3",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.27.1",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "sentence-transformers==5.0.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "storage3==0.11.3",
    "strenum==0.4.15",
    "supabase==2.15.1",
    "supafunc==0.9.4",
    "sympy==1.14.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.53.3",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==14.2",
    "werkzeug==3.1.3",
    "yarl==1.20.0",
]
